    of "gwb2ged" (see below in section "GeneWeb to Gedcom").
  - [Jul 2, 99] Fixed bug: importing GeneWeb base from old version passing
    by a GEDCOM file did not work if the current directory held spaces.
  - [Jul 2, 99] Changed names of html files to hold 8 characters maximum
    and 3 characters for the extension, to be unzippable by "pkunzip".

* GeneWeb Daemon/CGI (gwd)
  - [Jul 16, 99] Added a "back" button in case of update error (useful
    for browsers which loose the data in the forms when navigating).
  - [Jul 15, 99] Added ability to cancel GeneWeb links in relationship
    computing. Added a long display too, to print in the same page the
    detail of each relationship link.
  - [Jul 15, 99] Added system of grammar declinations (required by German,
    Esperanto, (future) Czech). Changed the lexicon to use this new system.
  - [Jul 9, 99] Added link (upper arrow) to welcome page in displayings by
    first names and surnames.
  - [Jul 9, 99] Fixed date check for possible father when interval (i.e. was
    telling "incorrect" when father died between 1250 and 1260 and son born
    in 1255).
  - [Jul 3, 99] Added "af" as possible surnames particles (this is Danish)
    possibly ignored in "search".

* Gedcom to GeneWeb (ged2gwb)
  - [Jul 5, 99] Fixed bug sometimes stopping the program (exception
    "Invalid_argument") after the detection of an error of a family whose
    parents are of bad sex (female father and male mother).
  - [Jul 2, 99] Recognizes the dates of the form "FROM..TO..".

* GeneWeb to Gedcom (gwb2ged)
  - [Jul 15, 99] Added option "-charset" whose values can be "ANSEL" or
    "ASCII": "ASCII" is the default. Deleted option "-ascii" now unuseful.
  - [Jul 2, 99] Generate now dates of the form "FROM..TO.." for titles.

* Lexicon (lang/lexicon.txt) and Welcome pages (lang/*/start.txt)
  - [Jul 8, 99] Updated Swedish phrases (Stig Petersson)
  - [Jul 3, 99] Updated Danish phrases (Hans Albeck)

GeneWeb version 2.04
--------------------
